--- a/SInventory/app/views/inventories/show.html.erb
+++ b/SInventory/app/views/inventories/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @inventory %>
 
 <div>
-  <%= link_to "Edit this inventory", edit_inventory_path(@inventory) %> |
-  <%= link_to "Back to inventories", inventories_path %>
+  <%= link_to "Edit this item", edit_inventory_path(@inventory) %> |
+  <%= link_to "Back to inventory", inventories_path %>
 
-  <%= button_to "Destroy this inventory", @inventory, method: :delete %>
+  <%= button_to "Destroy this item", @inventory, method: :delete %>
 </div>
