--- a/SInventory/app/views/home/_header.html.erb
+++ b/SInventory/app/views/home/_header.html.erb
@@ -5,7 +5,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li>
-      <%= link_to "About Us", home_about_path, class: "nav-link" %>
+      <%= link_to "Download CSV", "inventories.csv", class: "nav-link" %>
       </li>
       <li>
       <%= link_to "Inventory", inventories_path, class: "nav-link" %>
